--- a/src/App.css
+++ b/src/App.css
@@ -422,7 +422,7 @@ h2 span {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 40px 30px;
-    margin-bottom: 70px;
+    margin-bottom: 0px;
  }
 
  .topRestaurantsContainer h2 {
@@ -462,9 +462,33 @@ h2 span {
 
  .typeFood1 {
   text-align: center;
-  width: 66px;
+  font-weight: 400;
+  padding: 2px 7px;
+  width: 55px;
   color:#DAA31A;
   background-color: #F7EDD0;
+  border-radius: 5px;
+ }
+
+ .typeFood2 {
+  text-align: center;
+  font-weight: 400;
+  padding: 2px 7px;
+  width: 64px;
+  color: #FB471D;
+  background-color: #F7C5BA;
+  border-radius: 5px;
+ }
+
+ .typeFood3 {
+  text-align: center;
+  font-weight: 400;
+  padding: 2px 7px;
+  width: 64px;
+  color: #309D5B;
+  background-color: rgb(199, 251, 218);
+
+  border-radius: 5px;
  }
 
  .infoFood time::after {
@@ -487,6 +511,87 @@ h2 span {
  .cardRest:hover {
   transform: scale(1.1);
  }
+
+ .viewAll {
+  width: 100%;
+  text-align: end;
+  padding-right: 50px;
+  padding-bottom: 136px;
+  margin-bottom: 100px;
+  border-bottom: 1px solid #CBCBCB;
+}
+
+.viewAllA {
+  color: #ACADB9;
+}
+
+.vector {
+  width: 16px;
+  margin-bottom: 5px;
+  margin-left: 20px;
+}
+
+.vector2 {
+  width: 8px;
+  margin-left: -7px;
+}
+
+.topRestaurants {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 40px 30px;
+  margin-bottom: 80px;
+}
+
+.topRestaurantsDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
+  box-shadow: 3px 50px 36px rgba(229, 229, 229, 0.7);
+  border: 1px solid rgba(229, 229, 229, 0.7);
+  width: 224px;
+  height: 390px;
+  padding: 27px 10px;
+  border-radius: 34px;
+  transition: 0.3s;
+}
+
+.topRestaurantImg {
+  text-align: center;
+}
+
+.topRestaurantsDiv:hover {
+  transform: scale(1.1);
+ }
+
+ .topRestaurantsDiv .footerInfoFood {
+  width-left: 21px;
+ }
+
+ .infoTopRestaurants {
+  display: flex;
+  margin-top: 15px;
+  font-size: 26px;
+  font-weight: 700;
+  flex-direction: row;
+  justify-content:space-between;
+ }
+
+ .infoTopRestaurants span{
+  color: #8E97A6;
+  font-size: 18px;
+ }
+
+ .likeDiv {
+  text-align: end;
+  margin-bottom: -25px;
+ }
+
+
+
+
+
+
 
 
 .modalBackground {
@@ -565,4 +670,7 @@ input {
   background-color: var(--color-violet);
   color: var(--color-light);
 }
+
+
+
 
